@@ -144,7 +144,8 @@ bool UniChemFormat::WriteMolecule(OBBase* pOb, OBConversion* pConv)
     for(i = 1;i <= mol.NumAtoms(); i++)
     {
         atom = mol.GetAtom(i);
-        sprintf(buffer,"%3d%15.5f%15.5f%15.5f",
+        snprintf(buffer, BUFF_SIZE, 
+		"%3d%15.5f%15.5f%15.5f",
                 atom->GetAtomicNum(),
                 atom->GetX(),
                 atom->GetY(),
